Bouton clear area operationnel

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
 	<canvas id="paper" width="800" height="500"></canvas>
 	<span>
-		
+
 	</span>
 
 	<div class="color">
 		<input type="button" data-color="black" class="color">
-		<input type="button" data-color="white" class="color">    	
+		<input type="button" data-color="white" class="color">
 		<input type="button" data-color="grey" class="color">
 		<input type="button" data-color="blue" class="color">
 		<input type="button" data-color="red" class="color">
@@ -24,7 +24,12 @@
 		<input type="button" data-color="brown" class="color">
 		<input type="button" data-color="navy" class="color">
 	</div>
-	
+
+				
+		<button class="clear"> Clear Area </button>
+		<button class="gomme"> Gomme </button>
+
+
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 </body>
