--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 		<input type="button" data-color="navy" class="color">
 	</div>
 
-				
-		<button class="clear"> Clear Area </button>
+
+		<button class="clear"> Clear area </button>
 		<button class="gomme"> Gomme </button>
 
 
