--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
 		<input type="button" data-color="navy" class="color">
 	</div>
 
-
 		<button class="clear"> Clear area </button>
-		<button class="gomme"> Gomme </button>
+		<button class="gomme" data-color="white"> Gomme </button>
+		<div class="background">
+			<input type="checkbox">Changer background
+		</div>
+
+		<div class="pixel">
+			<button class="val" data='5'>5 px</button>
+			<button class="val" data='15'>15 px</button>
+			<button class="val" data='25'>25 px</button>
+			<button class="val" data='50'>50 px</button>
+		</div>
+
 
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
