--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 	<title>Canvas T-O-R</title>
 </head>
 <body>
+	<h1>Le Paint TH.O.R</h1>
 	<canvas id="paper" width="800" height="500"></canvas>
-	<span>
 
+	<span>
+		<img class="logo" src="24412877.png" alt="logo simplon">
 	</span>
 
 	<div class="color">
@@ -25,18 +27,22 @@
 		<input type="button" data-color="navy" class="color">
 	</div>
 
-		<button class="clear"> Clear area </button>
-		<button class="gomme" data-color="white"> Gomme </button>
-		<div class="background">
-			<input type="checkbox">Changer background
-		</div>
+	<div>
+	<button class="clear"> Clear area </button>
+	<button class="gomme" data-color="white"> Gomme </button>
+</div>
 
-		<div class="pixel">
-			<button class="val" data='5'>5 px</button>
-			<button class="val" data='15'>15 px</button>
-			<button class="val" data='25'>25 px</button>
-			<button class="val" data='50'>50 px</button>
-		</div>
+
+	<div class="pixel">
+		<button class="val" data='5'>5 px</button>
+		<button class="val" data='15'>15 px</button>
+		<button class="val" data='25'>25 px</button>
+		<button class="val" data='50'>50 px</button>
+	</div>
+
+	<form>
+			<input type="checkbox" id="fondchange"> Changer la couleur du fond
+	</form>
 
 
 
